assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Ranchers&display=swap');

* {
    box-sizing: border-box;
}

/* Navbar */
.navbar {
    font-family: "Ranchers", sans-serif;
    font-size: 250%;
    color: orange;
    background-color: white;
    display: block;
    width: 100%;
}

.nav-link p {
    font-family: "Raleway", sans-serif;
    font-size: 200%;
    color: black;
}

.nav-item {
    color: yellow;
    margin: 1% 5% 1% 5%;
}

/* body */
body {
    background-color: lime;
    margin: 0;
}

/* leaderboard */
#playerPanel {
    display: block;
    position: fixed;
    padding: 5%;
    text-align: center;
    justify-content: center;
    z-index: 1100; /* z index specifies the stack order, this ensures that the player panel is displayed in front of all other elements */
    background-color: white;
    font-family: "Raleway", sans-serif;
    font-size: 350%;
    color: black;
}



#currentScorePanel {
    display: hidden;
    font-family: "Ranchers", sans-serif;
    color: orange;
    font-size: 80%;
    padding: 1% 0 1% 0;
}

#playerName {
    width: 30%;
    margin-bottom: 3%;
}

#playerForm {
    margin-bottom: 1%;

}

#playerForm label {
    margin-bottom: 1%;
}

.enter-name {
    color: black;
    font-family: "Raleway", sans-serif;
    font-size: 70%;
    margin-bottom: 2%
}

/* gameboard */

.game-info {
    grid-column: 1 / -1;
    display: flex;
    justify-content: space-between;
}

.game-board {
    display: grid;
    grid-template-columns: repeat(6, auto);
    grid-gap: 10px;
    margin: 10%;
    justify-content: center;
    perspective: 500px;
}

.time-turns {
    font-family: "Raleway", sans-serif;
    color: black;
}

/* cards */

.card {
    position: relative;
    display: flex;
    max-width: 100%;
    max-height: 100%;
    transition: transform 300ms ease-in-out;
}

.card-back {
    transform: rotateY(0);

}

.card-picture {
    transform: rotateY(-180deg);
}

.card-visible .card-back {
    transform: rotateY(180deg);
}

.card-visible .card-picture {
    transform: rotateY(0);

}

.card-picture {
    display: flex;
    position: absolute;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    border-radius: 2px;
}

.card-img,
.card-back {
    max-width: 100%;
    max-height: 100%;
}

/* leaderboard table */

#scores {
    color: orange;
    border: 2px solid red;
    width: 80%;
    display: inline-block;
    font-size: 35%;
    margin-bottom: 12%;
}

#scores table {
    width: 100%;
    text-align: center;
}

#scores table th, td {
    text-align: center;
}

#scores table tr.last-game {
    color: black;
    border: 2px solid red;
}

